[gd_scene load_steps=5 format=3 uid="uid://spore_cloud_effect"]

[ext_resource type="Script" path="res://shared/effects/spore_cloud.gd" id="1_spore_cloud"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_spores"]
emission_shape = 2
emission_sphere_radius = 3.0
direction = Vector3(0, 1, 0)
spread = 45.0
initial_velocity_min = 0.5
initial_velocity_max = 2.0
gravity = Vector3(0, 0.2, 0)
scale_min = 0.2
scale_max = 0.6
color = Color(0.2, 0.8, 0.3, 0.8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_spore_particle"]
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.3, 0.9, 0.4, 0.7)
emission_enabled = true
emission = Color(0.1, 0.6, 0.2, 1)
emission_energy_multiplier = 2.0
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_spore_particle"]
material = SubResource("StandardMaterial3D_spore_particle")
size = Vector2(0.3, 0.3)

[node name="SporeCloud" type="Node3D"]
script = ExtResource("1_spore_cloud")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
amount = 80
lifetime = 1.5
explosiveness = 0.0
randomness = 0.8
visibility_aabb = AABB(-4, 0, -4, 8, 4, 8)
local_coords = false
draw_order = 1
process_material = SubResource("ParticleProcessMaterial_spores")
draw_pass_1 = SubResource("QuadMesh_spore_particle")

[node name="GroundGlow" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
light_color = Color(0.2, 0.8, 0.3, 1)
light_energy = 2.0
omni_range = 4.0
omni_attenuation = 1.5

[node name="AreaOfEffect" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaOfEffect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="body_entered" from="AreaOfEffect" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="AreaOfEffect" to="." method="_on_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
